--- a/convolution.html
+++ b/convolution.html
@@ -124,6 +124,12 @@
   <li class="">
     <a href="quantification.html">Quantification</a>
   </li>
+<li class="navbar-special">
+<p class="margin-caption">Annexes</p>
+</li>
+  <li class="">
+    <a href="biblio.html">Bibliographie</a>
+  </li>
 </ul>
 </nav>
 
