--- a/genindex.html
+++ b/genindex.html
@@ -123,6 +123,12 @@
   <li class="">
     <a href="quantification.html">Quantification</a>
   </li>
+<li class="navbar-special">
+<p class="margin-caption">Annexes</p>
+</li>
+  <li class="">
+    <a href="biblio.html">Bibliographie</a>
+  </li>
 </ul>
 </nav>
 
@@ -196,8 +202,17 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#Symbols"><strong>Symbols</strong></a>
  
 </div>
+<h2 id="Symbols">Symbols</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="biblio.html#term-prandoni-2008"><strong>[Prandoni 2008]</strong></a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
               </div>
