--- a/props-fourier.html
+++ b/props-fourier.html
@@ -80,10 +80,10 @@
     <a href="signaux-elementaires.html">Signaux élémentaires</a>
   </li>
   <li class="">
-    <a href="energie-puissance.html">Énergie et puissance</a>
+    <a href="props-signaux.html">Propriétés des signaux</a>
   </li>
   <li class="">
-    <a href="props-signaux.html">Propriétés des signaux</a>
+    <a href="energie-puissance.html">Énergie et puissance</a>
   </li>
 <li class="navbar-special">
 <p class="margin-caption">Convolution</p>
@@ -125,10 +125,22 @@
     <a href="quantification.html">Quantification</a>
   </li>
 <li class="navbar-special">
+<p class="margin-caption">Travail en classe</p>
+</li>
+  <li class="">
+    <a href="td1.html">📝 Séance du 14/10/2020</a>
+  </li>
+  <li class="">
+    <a href="tp1.html">💻 Séance du 22/10/2020</a>
+  </li>
+<li class="navbar-special">
 <p class="margin-caption">Annexes</p>
 </li>
   <li class="">
-    <a href="biblio.html">Bibliographie</a>
+    <a href="biblio.html">Références</a>
+  </li>
+  <li class="">
+    <a href="licence.html">Licence</a>
   </li>
 </ul>
 </nav>
@@ -179,8 +191,8 @@
         <div class="dropdown-buttons-trigger">
             <button id="dropdown-buttons-trigger" class="btn btn-secondary topbarbtn" aria-label="Connect with source repository"><i class="fab fa-github"></i></button>
             <div class="dropdown-buttons sourcebuttons">
-                <a class="repository-button" href="https://github.com/executablebooks/jupyter-book"><button type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left" title="Source repository"><i class="fab fa-github"></i>repository</button></a>
-                <a class="issues-button" href="https://github.com/executablebooks/jupyter-book/issues/new?title=Issue%20on%20page%20%2Fprops-fourier.html&body=Your%20issue%20content%20here."><button type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left" title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
+                <a class="repository-button" href="https://github.com/vincmazet/signal1"><button type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left" title="Source repository"><i class="fab fa-github"></i>repository</button></a>
+                <a class="issues-button" href="https://github.com/vincmazet/signal1/issues/new?title=Issue%20on%20page%20%2Fprops-fourier.html&body=Your%20issue%20content%20here."><button type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left" title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
                 
             </div>
         </div>
@@ -239,6 +251,9 @@
           By Vincent Mazet (Université de Strasbourg)<br/>
         
             &copy; Copyright 2020.<br/>
+          <div class="extra_footer">
+            Traitement du signal &mdash; Vincent Mazet (Université de Strasbourg), 2020 &mdash; <a href="licence.html">CC BY-NC 4.0</a>.
+          </div>
       </p>
     </div>
   </footer>
