--- a/signaux-elementaires.html
+++ b/signaux-elementaires.html
@@ -26,10 +26,16 @@
     <script src="_static/clipboard.min.js"></script>
     <script src="_static/copybutton.js"></script>
     <script src="_static/mystnb.js"></script>
+    <script src="_static/js/expo.js"></script>
+    <script src="_static/js/spetsi.js"></script>
+    <script src="_static/js/conv1c.js"></script>
+    <script src="_static/js/three.js"></script>
+    <script src="_static/js/.ipynb_checkpoints/expo-checkpoint.js"></script>
+    <script src="_static/js/.ipynb_checkpoints/spetsi-checkpoint.js"></script>
     <script src="_static/sphinx-book-theme.js"></script>
     <script >var togglebuttonSelector = '.toggle, .secondtoggle, .tag_hide_input div.cell_input, .tag_hide-input div.cell_input, .tag_hide_output div.cell_output, .tag_hide-output div.cell_output, .tag_hide_cell.cell, .tag_hide-cell.cell';</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
-    <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.18.0/dist/embed-amd.js"></script>
+    <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.0-alpha.0/dist/embed-amd.js"></script>
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
@@ -342,7 +348,7 @@ Le sinus cardinal est obtenu en Python avec la fonction <a class="reference exte
   \end{cases}
 \end{split}\]</div>
 <p>L’échelon est donc nul pour <span class="math notranslate nohighlight">\(t&lt;0\)</span> et égal à un sinon.
-Vuos l’aurez compris, il existe aussi une version à temps discret.
+Vous l’aurez compris, il existe aussi une version à temps discret.
 Il est également appelé fonction de Heaviside.</p>
 <div class="cell tag_remove-input docutils container">
 <div class="cell_output docutils container">
