--- a/genindex.html
+++ b/genindex.html
@@ -69,6 +69,9 @@
   <li class="">
     <a href="intro.html">Introduction</a>
   </li>
+  <li class="">
+    <a href="python.html">Installer et utiliser Python</a>
+  </li>
 <li class="navbar-special">
 <p class="margin-caption">Notions élémentaires</p>
 </li>
