--- a/classification.html
+++ b/classification.html
@@ -34,7 +34,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Signaux élémentaires" href="signaux-elementaires.html" />
-    <link rel="prev" title="Introduction" href="intro.html" />
+    <link rel="prev" title="Installer et utiliser Python" href="python.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -69,6 +69,9 @@
   <ul class="nav sidenav_l1">
   <li class="">
     <a href="intro.html">Introduction</a>
+  </li>
+  <li class="">
+    <a href="python.html">Installer et utiliser Python</a>
   </li>
 <li class="navbar-special">
 <p class="margin-caption">Notions élémentaires</p>
@@ -263,7 +266,7 @@ La combinaison de ces deux opérations est appelée <em>numérisation</em>. Nous
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Introduction</a>
+    <a class='left-prev' id="prev-link" href="python.html" title="previous page">Installer et utiliser Python</a>
     <a class='right-next' id="next-link" href="signaux-elementaires.html" title="next page">Signaux élémentaires</a>
 
     </div>
