--- a/td-fourier.html
+++ b/td-fourier.html
@@ -401,7 +401,7 @@
 \[\begin{split}
   z[n] =
     \begin{cases}
-      A   &amp;\text{si}\, -\frac{N}{2} \leq n &lt; \frac{N}{2}, \qquad\text{(attention :}\, z\left[\frac{N}{2}\right] = 0 \,\text{!)}\\
+      A   &amp;\text{si}\, -\frac{N}{2} \leq n &lt; \frac{N}{2}, \qquad\text{(attention :}\, z\left[\frac{N}{2}\right] = 0}\\
       0   &amp;\text{sinon}.
     \end{cases}
   \end{split}\]</div>
