--- a/numerisation.html
+++ b/numerisation.html
@@ -47,6 +47,7 @@
     <script src="_static/copybutton.js"></script>
     <script src="_static/js/expo.js"></script>
     <script src="_static/js/convolution.js"></script>
+    <script src="_static/js/aliasing.js"></script>
     <script src="_static/js/spetsi.js"></script>
     <script src="_static/js/conv1c.js"></script>
     <script src="_static/js/three.js"></script>
