--- a/xcorr/td.html
+++ b/xcorr/td.html
@@ -494,7 +494,7 @@ x(t) = s(t) + a\,s(t-d)
 \]</div>
 <p>où <span class="math notranslate nohighlight">\(a\)</span> est l’atténuation et <span class="math notranslate nohighlight">\(d\)</span> le retard dus à la réflexion sur le mur.</p>
 <div class="figure align-default" id="f-td2-echo">
-<a class="reference internal image-reference" href="xcorr/_static/figs/echo.png"><img alt="xcorr/_static/figs/echo.png" src="xcorr/_static/figs/echo.png" style="height: 60px;" /></a>
+<a class="reference internal image-reference" href="../_images/echo.png"><img alt="../_images/echo.png" src="../_images/echo.png" style="height: 80px;" /></a>
 </div>
 <ol class="simple">
 <li><p>Déterminez l’autocorrélation de <span class="math notranslate nohighlight">\(x(t)\)</span> en fonction de l’autocorrélation de <span class="math notranslate nohighlight">\(s(t)\)</span>.</p></li>
