--- a/notions/td.html
+++ b/notions/td.html
@@ -473,9 +473,9 @@
 <p>Tracez à la main les signaux suivants :</p>
 <div class="math notranslate nohighlight">
 \[
-  \frac{1}{2} \mathrm{sinc}\!\left(\frac{t}{2}\right),\qquad
-  \sin(\pi n),\qquad
-  \mathrm{rect}\!\left(\frac{n}{4}-\frac{1}{2}\right) - \delta[n-2]
+  x(t) = \frac{1}{2} \mathrm{sinc}\!\left(\frac{t}{2}\right),\qquad
+  y[n] = \sin(\pi n),\qquad
+  z[n] = \mathrm{rect}\!\left(\frac{n}{4}-\frac{1}{2}\right) - \delta[n-2]
 \]</div>
 </div>
 <div class="section" id="exercice-3">
