--- a/notions/proprietes-des-signaux.html
+++ b/notions/proprietes-des-signaux.html
@@ -463,7 +463,7 @@
 <ul class="simple">
 <li><p>Un changement de signe sur <span class="math notranslate nohighlight">\(t\)</span> revient à un retournement de l’axe temporel, donc à une symétrie par rapport à l’origine.</p></li>
 <li><p>Un changement d’échelle consiste à multiplier <span class="math notranslate nohighlight">\(t\)</span> par une variable <span class="math notranslate nohighlight">\(a \in \mathbb{R}^{+*}\)</span>.</p></li>
-<li><p>Une translation (ou décalage) consiste à ajouter une variable <span class="math notranslate nohighlight">\(T\in\mathbb{R}\)</span> à la variable indépendante.</p></li>
+<li><p>Une translation (ou décalage) consiste à ajouter une variable <span class="math notranslate nohighlight">\(d\in\mathbb{R}\)</span> à la variable indépendante.</p></li>
 </ul>
 <p>L’animation ci-dessous permet de visualiser ces transformations sur <span class="math notranslate nohighlight">\(t\)</span>, dans l’exemple d’un signal <span class="math notranslate nohighlight">\(x\)</span> tel que</p>
 <div class="math notranslate nohighlight">
