--- a/fourier/fourier.html
+++ b/fourier/fourier.html
@@ -575,7 +575,7 @@ x[n] = \sum_{k=0}^{N-1} X[k] e^{+j 2 \pi k n / N}
 </div>
 <div class="math notranslate nohighlight">
 \[
-X[k] = \sum_{k=0}^{N-1} x[n] e^{-j 2 \pi k n / N}.
+X[k] = \sum_{n=0}^{N-1} x[n] e^{-j 2 \pi k n / N}.
 \]</div>
 <p><strong>Remarque</strong>   Un signal <span class="math notranslate nohighlight">\(x[n]\)</span> à durée limité (donc non défini en dehors de l’intervalle <span class="math notranslate nohighlight">\(\{0,\dots,N-1\}\)</span>)
 peut être vu comme un signal périodique de période <span class="math notranslate nohighlight">\(N\)</span>.
