erreur Parseval et SFD

--- a/fourier/fourier.html
+++ b/fourier/fourier.html
@@ -566,8 +566,9 @@ qui sont également périodiques de période <span class="math notranslate nohig
 </div>
 <div class="math notranslate nohighlight">
 \[
-x[n] = \sum_{k=0}^{N-1} X[k] e^{+j 2 \pi k n / N}
+x[n] = \frac{1}{N} \sum_{k=0}^{N-1} X[k] e^{+j 2 \pi k n / N}
 \]</div>
+<center><span style="color:#a00">(Attention, ajout du facteur 1/N)</span></center>
 <p>et :</p>
 <div class="margin sidebar">
 <p class="sidebar-title"></p>
