--- a/num/numerisation.html
+++ b/num/numerisation.html
@@ -431,7 +431,7 @@
 Si on veut transmettre, traiter ou stocker ces signaux sous forme numérique ou à l’aide de systèmes numériques,
 alors il faut les convertir au préalable sous forme numérique (amplitudes et temps discrets),
 donc transformer ces signaux en signaux échantillonnés et quantifiés.
-Les principaux intérêts du traitement numérique s’un signal sont
+Les principaux intérêts du traitement numérique d’un signal sont
 la simplicité de réglage des paramètres, la robustesse au bruit, la réduction du coût, etc.</p>
 <p>Or, la numérisation impose une modification du signal analogique ;
 mais les contraintes imposées pour que les signaux numérisés représentent correctement les signaux analogiques sont faibles.</p>
