--- a/num/td.html
+++ b/num/td.html
@@ -523,7 +523,7 @@ Quel sera le signal analogique reconstruit à partir du signal numérique ?</p>
 le signal <span class="math notranslate nohighlight">\(x(t) = \cos(2\pi f_0 t)\)</span> est échantillonné à une fréquence <span class="math notranslate nohighlight">\(f_e=1/T_e\)</span> pour obtenir le signal <span class="math notranslate nohighlight">\(y(t)\)</span>,
 puis filtré par un filtre passe-bas idéal de fréquence de coupure <span class="math notranslate nohighlight">\(f_c = f_e/2\)</span> pour obtenir le signal <span class="math notranslate nohighlight">\(z(t)\)</span>.</p>
 <div class="figure align-default">
-<a class="reference internal image-reference" href="num/_static/figs/aliasing.png"><img alt="num/_static/figs/aliasing.png" src="num/_static/figs/aliasing.png" style="width: 300px;" /></a>
+<a class="reference internal image-reference" href="../_images/aliasing.png"><img alt="../_images/aliasing.png" src="../_images/aliasing.png" style="width: 300px;" /></a>
 </div>
 <p>Dans un premier temps, on prend <span class="math notranslate nohighlight">\(f_0=2\)</span> kHz et <span class="math notranslate nohighlight">\(f_e=6\)</span> kHz.</p>
 <ul class="simple">
