--- a/fourier/temps-frequence.html
+++ b/fourier/temps-frequence.html
@@ -475,7 +475,7 @@ Dans le cas de signaux discrets, la STFT est :</p>
 <!-- $$X(f,\tau) = \int_{-\infty}^{+\infty} x(t) w(t-\tau) e^{-j2\pi f t} dt$$ -->
 <div class="math notranslate nohighlight">
 \[
-X[k,p] = \sum_{n=-0}^{N} x[n] w[n-p] e^{-j2\pi kn/N}
+X[k,p] = \sum_{n=0}^{N-1} x[n] w[n-p] e^{-j2\pi kn/N}
 \]</div>
 <p>Il s’agit donc de la formule de la transformée de Fourier discrète dans laquelle a été introduite la fenêtre positionnée en <span class="math notranslate nohighlight">\(p\)</span>.
 La STFT est donc un signal à deux dimensions qui dépend d’un temps <span class="math notranslate nohighlight">\(p\)</span> et d’une fréquence <span class="math notranslate nohighlight">\(k\)</span>), d’où le nom de « représentation temps-fréquence ».
@@ -490,32 +490,32 @@ Le spectrogramme fournit une indication sur la quantité d’énergie présente 
 autour de la fréquence <span class="math notranslate nohighlight">\(k\)</span> et de l’instant <span class="math notranslate nohighlight">\(p\)</span>.
 Les figures ci-après représentent les spectrogrammes de quelques signaux.</p>
 <div class="tabbed-set docutils">
-<input checked="checked" id="eb51a1f1-90bf-474e-b61b-33f26b50a28c" name="4ab29551-fc7f-4934-9c9b-f65ab346ebac" type="radio">
-</input><label class="tabbed-label" for="eb51a1f1-90bf-474e-b61b-33f26b50a28c">
+<input checked="checked" id="3190e423-2612-4b0d-a112-7e59c2856eb8" name="ccf22057-77cf-4e5a-94c0-cb2156152761" type="radio">
+</input><label class="tabbed-label" for="3190e423-2612-4b0d-a112-7e59c2856eb8">
 Sinus à 50 et 200 Hz</label><div class="tabbed-content docutils">
 <div class="figure align-default">
 <a class="reference internal image-reference" href="../_images/tf-sin50200.svg"><img alt="../_images/tf-sin50200.svg" src="../_images/tf-sin50200.svg" width="800px" /></a>
 </div>
 <p>L’ordre dans lequel apparaissent les deux sinusoïdes est clairement visible sur le spectrogramme.</p>
 </div>
-<input id="0884e447-601b-434d-90c8-0d4f0df63be7" name="4ab29551-fc7f-4934-9c9b-f65ab346ebac" type="radio">
-</input><label class="tabbed-label" for="0884e447-601b-434d-90c8-0d4f0df63be7">
+<input id="d4259f5e-7f16-41ad-8595-7e56f35981d5" name="ccf22057-77cf-4e5a-94c0-cb2156152761" type="radio">
+</input><label class="tabbed-label" for="d4259f5e-7f16-41ad-8595-7e56f35981d5">
 Sinus à 200 et 50 Hz</label><div class="tabbed-content docutils">
 <div class="figure align-default">
 <a class="reference internal image-reference" href="../_images/tf-sin20050.svg"><img alt="../_images/tf-sin20050.svg" src="../_images/tf-sin20050.svg" width="800px" /></a>
 </div>
 <p>L’ordre dans lequel apparaissent les deux sinusoïdes est clairement visible sur le spectrogramme.</p>
 </div>
-<input id="286dd04e-36e6-47c4-bc46-8092bb8b3e85" name="4ab29551-fc7f-4934-9c9b-f65ab346ebac" type="radio">
-</input><label class="tabbed-label" for="286dd04e-36e6-47c4-bc46-8092bb8b3e85">
+<input id="4503da89-fd3e-4206-99cf-2f31d6a26517" name="ccf22057-77cf-4e5a-94c0-cb2156152761" type="radio">
+</input><label class="tabbed-label" for="4503da89-fd3e-4206-99cf-2f31d6a26517">
 Gaussienne modulée</label><div class="tabbed-content docutils">
 <div class="figure align-default">
 <a class="reference internal image-reference" href="../_images/tf-gaussienne.svg"><img alt="../_images/tf-gaussienne.svg" src="../_images/tf-gaussienne.svg" width="800px" /></a>
 </div>
 <p>L’instant d’apparition de l’oscillation, ainsi que sa fréquence, sont clairement visibles sur le spectrogramme.</p>
 </div>
-<input id="d83726d7-7abf-4ee9-8d3e-c98c647a5625" name="4ab29551-fc7f-4934-9c9b-f65ab346ebac" type="radio">
-</input><label class="tabbed-label" for="d83726d7-7abf-4ee9-8d3e-c98c647a5625">
+<input id="54f98221-1673-4938-95d9-7158c8b6d3aa" name="ccf22057-77cf-4e5a-94c0-cb2156152761" type="radio">
+</input><label class="tabbed-label" for="54f98221-1673-4938-95d9-7158c8b6d3aa">
 Chirp</label><div class="tabbed-content docutils">
 <div class="figure align-default">
 <a class="reference internal image-reference" href="../_images/tf-chirp.svg"><img alt="../_images/tf-chirp.svg" src="../_images/tf-chirp.svg" width="800px" /></a>
@@ -524,16 +524,16 @@ Chirp</label><div class="tabbed-content docutils">
 Dans la nature, le chant des oiseaux, les vocalises des cétacés ou les ultrasons émis par les chauve-souris ressemblent à des chirps.
 Les chirps sont également émis par les sonars et les radars.</p>
 </div>
-<input id="d97db190-9311-4b96-92c0-9df55627b4e6" name="4ab29551-fc7f-4934-9c9b-f65ab346ebac" type="radio">
-</input><label class="tabbed-label" for="d97db190-9311-4b96-92c0-9df55627b4e6">
+<input id="e9d21331-bcdd-454c-8ef4-8525a98eaee1" name="ccf22057-77cf-4e5a-94c0-cb2156152761" type="radio">
+</input><label class="tabbed-label" for="e9d21331-bcdd-454c-8ef4-8525a98eaee1">
 Voyelles</label><div class="tabbed-content docutils">
 <div class="figure align-default">
 <a class="reference internal image-reference" href="../_images/tf-aeiou.svg"><img alt="../_images/tf-aeiou.svg" src="../_images/tf-aeiou.svg" width="800px" /></a>
 </div>
 <p>Ce graphique représente l’enregistrement des voyelles françaises : elles sont facilement différentiables sur la représentation temps-fréquence.</p>
 </div>
-<input id="41827b41-1ed0-4e69-b1dc-3503dfbc6a01" name="4ab29551-fc7f-4934-9c9b-f65ab346ebac" type="radio">
-</input><label class="tabbed-label" for="41827b41-1ed0-4e69-b1dc-3503dfbc6a01">
+<input id="a77850e7-395d-4351-bb8f-1a0cc5cae491" name="ccf22057-77cf-4e5a-94c0-cb2156152761" type="radio">
+</input><label class="tabbed-label" for="a77850e7-395d-4351-bb8f-1a0cc5cae491">
 Voyelle « i » dite par un homme et une femme</label><div class="tabbed-content docutils">
 <div class="figure align-default">
 <a class="reference internal image-reference" href="../_images/tf-homme-femme.svg"><img alt="../_images/tf-homme-femme.svg" src="../_images/tf-homme-femme.svg" width="800px" /></a>
@@ -541,8 +541,8 @@ Voyelle « i » dite par un homme et une femme</label><div class="tabbed-content
 <p>Une homme et une femme disent la voyelle « i » l’un après l’autre.
 Qui parle en premier ?</p>
 </div>
-<input id="64d84301-88b4-4aa6-935f-d405f608f234" name="4ab29551-fc7f-4934-9c9b-f65ab346ebac" type="radio">
-</input><label class="tabbed-label" for="64d84301-88b4-4aa6-935f-d405f608f234">
+<input id="5ac341e7-32d2-4515-a494-14f396b4611c" name="ccf22057-77cf-4e5a-94c0-cb2156152761" type="radio">
+</input><label class="tabbed-label" for="5ac341e7-32d2-4515-a494-14f396b4611c">
 Lettre à Élise</label><div class="tabbed-content docutils">
 <div class="figure align-default">
 <a class="reference internal image-reference" href="../_images/tf-elise.svg"><img alt="../_images/tf-elise.svg" src="../_images/tf-elise.svg" width="800px" /></a>
