--- a/conv/tp.html
+++ b/conv/tp.html
@@ -477,7 +477,7 @@ Attention à spécifier l’argument <code class="docutils literal notranslate">
     \end{cases}
  \end{split}\]</div>
 <ul>
-<li><p>Représentez le signal <span class="math notranslate nohighlight">\(x\)</span> <a href="../_static/AEP-2005.csv">AEP-2005.csv</a> (à charger avec <code class="docutils literal notranslate"><span class="pre">numpy.loadtxt</span></code>)
+<li><p>Représentez le signal <span class="math notranslate nohighlight">\(x\)</span> <a href="../_static/AEP-2005.csv">AEP-2005.csv</a>
 qui correspond à la consommation électrique de l’est des États-Unis, heure par heure sur un an.
 Représentez également le signal <span class="math notranslate nohighlight">\(y\)</span> défini ci-dessous, ainsi que le produit de convolution <span class="math notranslate nohighlight">\(x*y\)</span>.</p>
 <div class="math notranslate nohighlight">
