--- a/xcorr/tp.html
+++ b/xcorr/tp.html
@@ -468,8 +468,9 @@ title="Print to PDF"
     \end{cases}
   \end{split}\]</div>
 </li>
-<li><p>Représentez l’intercorrélation <span class="math notranslate nohighlight">\(R_{xm}\)</span> entre <span class="math notranslate nohighlight">\(x\)</span> et <span class="math notranslate nohighlight">\(m\)</span>.
-Que se passe-t-il lorsque <span class="math notranslate nohighlight">\(k\)</span> varie ?</p></li>
+<li><p>Représentez l’intercorrélation <span class="math notranslate nohighlight">\(R_{xm}\)</span> entre <span class="math notranslate nohighlight">\(x\)</span> et <span class="math notranslate nohighlight">\(m\)</span> (<code class="docutils literal notranslate"><span class="pre">numpy.correlate</span></code>).
+Attention à définir un nouveau vecteur des abscisses !</p></li>
+<li><p>Que se passe-t-il lorsque <span class="math notranslate nohighlight">\(k\)</span> varie ?</p></li>
 <li><p>Chargez le fichier <a href="../_static/message1.csv">message1.csv</a> et affichez le signal correspondant.
 Ce signal est un message codant un message binaire de 10 bits,
 où les 0 sont codés par une porte d’amplitude négative et les 1 par une porte d’amplitude positive.
