--- a/fourier/temps-frequence.html
+++ b/fourier/temps-frequence.html
@@ -511,7 +511,7 @@ pour avoir une très bonne localisation à la fois en temps et en fréquence :
 ce phénomène est le principe d’incertitude de Gabor-Heisenberg.</p>
 <p>C’est d’ailleurs ce qui explique la propriété de changement d’échelle des transformations de Fourier :
 la contraction dans un domaine implique une dilatation dans l’autre domaine.
-Les fenêtres qui conduisent à la meilleur location temps-fréquence sont des gaussiennes :
+Les fenêtres qui conduisent à la meilleure location temps-fréquence sont des gaussiennes :
 on parle alors d’analyse de Gabor.</p>
 <p>La tranformée de Fourier à court terme a l’avantage d’être très simple.
 En revanche, elle considère implicitement le signal stationnaire dans la fenêtre d’observation
