précision dans le texte

--- a/elementaire/classification.html
+++ b/elementaire/classification.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" type="text/css" href="../_static/styles/sphinx-book-theme.css?v=a3416100" />
     <link rel="stylesheet" type="text/css" href="../_static/togglebutton.css?v=109105fe" />
     <link rel="stylesheet" type="text/css" href="../_static/copybutton.css?v=949a1ff5" />
-    <link rel="stylesheet" type="text/css" href="../_static/mystnb.4510f1fc1dee50b3e5859aac5469c37c29e427902b24a333a5f9fcb2f0b3ac41.css" />
+    <link rel="stylesheet" type="text/css" href="../_static/mystnb.4510f1fc1dee50b3e5859aac5469c37c29e427902b24a333a5f9fcb2f0b3ac41.css?v=be8a1c11" />
     <link rel="stylesheet" type="text/css" href="../_static/sphinx-thebe.css?v=4fa983c6" />
     <link rel="stylesheet" type="text/css" href="../_static/sphinx-design.min.css?v=95c83b7e" />
     <link rel="stylesheet" type="text/css" href="../_static/jbvinc.css?v=8dc5e944" />
@@ -402,7 +402,7 @@ quelles sont les conditions qui permettent de ne pas trop dégrader le signal
 et quelles sont les conséquences sur le signal numérique.</p>
 <div class="admonition-remarque admonition">
 <p class="admonition-title">Remarque</p>
-<p>Sur un ordinateur, on ne peut donc traiter que des signaux numériques, et de durée limité,
+<p>Sur un ordinateur, on ne peut donc traiter que des signaux numériques, et de durée limitée,
 car une mémoire informatique ne peut stocker qu’un nombre fini de valeurs dont la précision est limitée.</p>
 </div>
 <p>Un signal peut également être à valeurs complexes, quelle que soit sa classification.
