--- a/vectoriel/representation-vectorielle.html
+++ b/vectoriel/representation-vectorielle.html
@@ -541,7 +541,7 @@ Il existe deux familles de compression :</p>
 <li><p>les techniques de compression sans perte permettent de gagner de la place mémoire sans modifier le signal, mais le gain en place mémoire est modéré ;</p></li>
 <li><p>les techniques de compression avec perte permettent de gagner beaucoup de place mémoire, mais le signal sera nécessairement modifié. Tout l’enjeu consiste à trouver une technique qui permette de réduire le plus possible l’encombrement mémoire tout en garantissant une perte d’information du signal qui soit maîtrisée.</p></li>
 </ul>
-<p>Dans cet exemple, nous allons montrer effectuer la compression d’un signal audio
+<p>Dans cet exemple, nous allons montrer effectuer la compression avec perte d’un signal audio
 en utilisant sa décomposition dans une base appropriée : la base de Haar.
 Pour cela, nous considérons des signaux de taille <span class="math notranslate nohighlight">\(N=16\)</span>.</p>
 <section id="base-de-haar">
