--- a/fourier/tp.html
+++ b/fourier/tp.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" type="text/css" href="../_static/styles/sphinx-book-theme.css?v=a3416100" />
     <link rel="stylesheet" type="text/css" href="../_static/togglebutton.css?v=109105fe" />
     <link rel="stylesheet" type="text/css" href="../_static/copybutton.css?v=949a1ff5" />
-    <link rel="stylesheet" type="text/css" href="../_static/mystnb.4510f1fc1dee50b3e5859aac5469c37c29e427902b24a333a5f9fcb2f0b3ac41.css" />
+    <link rel="stylesheet" type="text/css" href="../_static/mystnb.4510f1fc1dee50b3e5859aac5469c37c29e427902b24a333a5f9fcb2f0b3ac41.css?v=be8a1c11" />
     <link rel="stylesheet" type="text/css" href="../_static/sphinx-thebe.css?v=4fa983c6" />
     <link rel="stylesheet" type="text/css" href="../_static/sphinx-design.min.css?v=95c83b7e" />
     <link rel="stylesheet" type="text/css" href="../_static/jbvinc.css?v=8dc5e944" />
@@ -410,7 +410,7 @@ y(t) =
 <p>avec <span class="math notranslate nohighlight">\(A=1\)</span> et <span class="math notranslate nohighlight">\(T = 1\)</span>.</p>
 <ul class="simple">
 <li><p>Tracez avec Python la série de Fourier de ce signal (qui a été calculée en TD),
-c’est-à-dire le spectre d’amplitude et de phase de <span class="math notranslate nohighlight">\(y\)</span>, pour <span class="math notranslate nohighlight">\(k\)</span> allant de <span class="math notranslate nohighlight">\(-10\)</span> à <span class="math notranslate nohighlight">\(10\)</span>.</p></li>
+c’est-à-dire le spectre d’amplitude (<code class="docutils literal notranslate"><span class="pre">numpy.abs</span></code>) et de phase (<code class="docutils literal notranslate"><span class="pre">numpy.angle</span></code>) de <span class="math notranslate nohighlight">\(y\)</span>, pour <span class="math notranslate nohighlight">\(k\)</span> allant de <span class="math notranslate nohighlight">\(-10\)</span> à <span class="math notranslate nohighlight">\(10\)</span>.</p></li>
 </ul>
 <p>On souhaite maintenant reconstruire le signal temporel en ne considérant que les <span class="math notranslate nohighlight">\(K\)</span> premières harmoniques.</p>
 <ul class="simple">
