--- a/numerisation/echantillonnage.html
+++ b/numerisation/echantillonnage.html
@@ -450,7 +450,7 @@ x(t) &amp;\text{si}\ t\ \text{est multiple de}\ T_e \\
 <p>On peut montrer que la transformée de Fourier de <span class="math notranslate nohighlight">\(x^*(t)\)</span> s’écrit :</p>
 <div class="math notranslate nohighlight">
 \[
-X^*(f) = \sum_k X(f-kf_e)
+X^*(f) = f_e \sum_k X(f-kf_e)
 \]</div>
 <p>où <span class="math notranslate nohighlight">\(f_e=1/T_e\)</span> est la « fréquence d’échantillonnage » (en anglais <em>sampling frequency</em>, souvent notée <span class="math notranslate nohighlight">\(f_s\)</span>).
 Par conséquent, l’échantillonnage du signal temporel à la période <span class="math notranslate nohighlight">\(T_e\)</span> produit une périodisation du spectre à la période <span class="math notranslate nohighlight">\(f_e=1/T_e\)</span>,
