--- a/numerisation/td.html
+++ b/numerisation/td.html
@@ -432,7 +432,7 @@ document.write(`
 <li><p>Montrez que <span class="math notranslate nohighlight">\(x^*\)</span> a pour transformée de Fourier</p>
 <div class="math notranslate nohighlight">
 \[
-  X^*(f) = \sum_k X(f-kf_e).
+  X^*(f) = f_e \sum_k X(f-kf_e).
   \]</div>
 <p>La transformée de Fourier de <span class="math notranslate nohighlight">\(Ш_T(t)\)</span> est <span class="math notranslate nohighlight">\(\frac{1}{T} Ш_{1/T}(f)\)</span>.</p>
 </li>
